--- a/mbti/index.html
+++ b/mbti/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic&display=swap" rel="stylesheet" />
 
+<head>
+  <meta charset="UTF-8" />
+  <title>تاقیکردنەوەی MBTI</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <div id="question-text"></div>
+    <div id="choices-container"></div>
+    <div class="navigation">
+      <button id="prev-btn">پێشتر</button>
+      <button id="next-btn">دواتر</button>
+    </div>
+  </div>
+
+  <script src="questions.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
