--- a/mbti/index.html
+++ b/mbti/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic&display=swap" rel="stylesheet" />
+  <head>
+    <meta charset="UTF-8" />
+    <title>تاقیکردنەوەی MBTI</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<head>
-  <meta charset="UTF-8" />
-  <title>تاقیکردنەوەی MBTI</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+  </head>
 <body>
   <div class="container">
     <div id="question-text"></div>
+
+    <!-- Choices -->
     <div id="choices-container"></div>
+
+    <!-- Scale buttons -->
+    <div id="scale-container"></div>
+
+    <!-- Navigation -->
     <div class="navigation">
       <button id="prev-btn">پێشتر</button>
       <button id="next-btn">دواتر</button>
