--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main>
     <div class="test-links"> 
-      <a href="mbti/index.html" class="btn">MBTI تاقیکردنەوەی</a>
+      <a href="mbti/welcome.html" class="btn">MBTI تاقیکردنەوەی</a>
     
 
     </div>
